--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@azure/cosmos": "^3.15.0",
+    "@types/node-cache": "^4.2.5",
     "crypto": "^1.0.1",
+    "node-cache": "^5.1.2",
     "uuidv4": "^6.2.12"
   },
   "devDependencies": {
